tests/paczka2/big_fuzzy/23805740.err
Error in line 2: ggzE S909 85,2
Error in line 3: HoR6F S565 33,5
Error in line 10: HoR6F S909 6,4
Error in line 11: HoR6F S217 85,4
Error in line 8: ggzE S217 42,9
Error in line 21: DYD8 S909 84,6
Error in line 27: DYD8 S217 26,10
Error in line 20: ggzE S21	 0,5
Error in line 28: ggzE S909 86,3
Error in line 24: DYD8 S565 77,7
Error in line 30: vWZbymLe S217 30,9
Error in line 33: LfJnx S565 14,5
Error in line 36: vWZbymLe S565 48,5
Error in line 32: ggzE S565 76,5
Error in line 31: HoR6F S161 7,4
Error in line 58: DYD8 S217 80,3
Error in line 62: S909 S217 218,9
Error in line 66: DYD8 S565 50,6
Error in line 74: vWZbymLe S909 37,5
Error in line 76: ggzE S161 6,5
Error in line 73: DYD8 S909 69,8
Error in line 75: HoR6F S565 36,6
Error in line 87: LfJnx S161 38,1
Error in line 83: S909 S565 2,2
Error in line 90: PiV8NMzN S217 0,5
Error in line 101: LfJnx S565 18,12
Error in line 96: LfJnx S217 15,6
Error in line 105: vWZbymLe S161 49,1
Error in line 115: HoR6F S565 76,9
Error in line 116: HoR6F S909 27,6
Error in line 122: HoR6F S217 49,7
Error in line 123: S909 S909 44,5
Error in line 133: PiV8NMzN S161 92,2
Error in line 155: S909 S1>1 >4,9
Error in line 146: HoR6F S217 89,2
Error in line 157: S909 S161 284,93
Error in line 171: ggzE S565 19,2
Error in line 173: ggzE S909 -3,8
Error in line 165: vWZbymLe S909 29,4
Error in line 153: S909 S161 1,8
Error in line 191: HoR6F S161 42,3
Error in line 194: S909 S161 37,2
Error in line 199: LfJnx S161 64,2
Error in line 207: HoR6F S909 114,2
Error in line 218: LfJnx S909 59,1
Error in line 226: LfJnx S161 60,9
Error in line 229: LfJnx S909 86,2
Error in line 240: ggzE S161 56,7
Error in line 248: ggzE S565 3,6
